--- a/Synopsis/content.tex
+++ b/Synopsis/content.tex
@@ -33,10 +33,10 @@
 \underline{\textbf{Первая глава}} посвящена %\dots
 математическим основам построения алгоритмов оценки параметров гармоник.
 
-Объектом исследования яляются алгоритмы оценки параметров гармоник в силовых электрических сетях. Предметом иследования является точность и быстродействие алгоритмов оценки параметров гармоник.
+Объектом исследования являются алгоритмы оценки параметров гармоник в силовых электрических сетях. Предметом иследования является точность и быстродействие алгоритмов оценки параметров гармоник. Мы изучаем оценку параметров гармоник на примере сигналов в электрической сети.
 
 В работе представлена математическая модель сигнала в электрической сети, обобщающая результаты исследований проблем качества электроэнергии (КЭ) и учитывающая требования регламентирующих документов. Она позволяет проводить исследования алгоритмов анализа электрических сигналов, а также средств измерений, построенных на их основе.
-Модель сигнала электрической сети с учетом связывает гармоники, высшие гармоники и интергармоники тока и напряжения электрической сети при наличии шума: 
+Модель сигнала электрической сети связывает гармоники, высшие гармоники и интергармоники тока и напряжения электрической сети при наличии шума: 
 %ГОСТ 30804.4.7-2013 (IEC 61000-4-7:2009) Совместимость технических средств электромагнитная. Общее руководство по средствам измерений и измерениям гармоник и интергармоник для систем электроснабжения и подключаемых к ним технических средств. 2013; Доступно по: http://docs.cntd.ru/document/1200103652
 \begin{equation}
 	\label{eq:equation6}
@@ -76,9 +76,7 @@ $\eta$ – шум.
 
 Для определения точности полученных результатов алгоритмы можно проверить с помощью неравенства Крамера-Рао. В зарубежной литературе чаще встречается термин Cramer-Rao lower bound (CRLB), что обозначает <<нижняя граница Крамера-Рао>>. 
 
-В неравенстве Крамера-Рао сигнал имеет наибольшую величину дисперсии при некоторых условиях. Если неравенство Крамера-Рао преобразуется в равенство, то оценка параметров считается наилучшей. Отсюда следует, что дисперсия данной оценки самая маленькая из возможных. Таким образом, данная оценка лучше всех остальных, и метод с такой дисперсией обладает наилучшей точностью. Несмещенная оценка, которая достигается нижней границей Крамера-Рао, называется эффективной. Такое решение обеспечивает наименьшую среднеквадратичную ошибку среди несмещенных методов и называется minimum variance unbiased (MVU)~--~<<оценкой с минимальной несмещенной дисперсией>>.
-
-Информация Фишера играет важную роль в статическом моделировании для построения гипотез с использованием оценок максимального правдоподобия. Функция правдоподобия называется maximum likelihood estimation (MLE), то есть «оценкой максимального правдоподобия». Общаю формулу границы Крамера-Рао можно представить в следующем виде:
+В неравенстве Крамера-Рао сигнал имеет наибольшую величину дисперсии при некоторых условиях. Если неравенство Крамера-Рао преобразуется в равенство, то оценка параметров считается наилучшей. Отсюда следует, что дисперсия данной оценки самая маленькая из возможных. Таким образом, данная оценка лучше всех остальных, и метод с такой дисперсией обладает наилучшей точностью. Несмещенная оценка, которая достигается нижней границей Крамера-Рао, называется эффективной. Такое решение обеспечивает наименьшую среднеквадратичную ошибку среди несмещенных методов и называется minimum variance unbiased (MVU)~--~<<оценкой с минимальной несмещенной дисперсией>>. Общая формула границы Крамера-Рао:
 \begin{equation}
 	\label{eq:equation2}
 	var(\theta)\geq\frac{1}{I(\left.\theta)\right]}
@@ -107,20 +105,8 @@ $\eta$ – шум.
 \underline{\textbf{Вторая глава}} посвящена математическим основам построения алгоритмов оценки параметров гармоник.
 Высокую точность оценки спектральных составляющих сигнала может
 обеспечить ЦОС, в этом случае его математической
-основой является БПФ. Однако применение
-только ДПФ не позволяет точно оценить параметры гармоник сигнала, когда
-максимум ДПФ не совпадает с максимумом спектра. В связи с этим необходимо применять дополнительные алгоритмы. Исследованы методы оценки спектральных составляющих:
-\begin{enumerate}
-	\item	Метод Якобсена (Jacobsen's Modified Quadratic Estimator).
-	\item	Два метода Квина (Quinn's Estimator, Quinn's Second Estimator).
-	\item	Два метода Маклеода (Macleod's Estimator).
-	\item	Метод Грэндка (Grandke's method).
-	\item	Алгоритм параболической интерполяции (Parabolic Interpolation).
-	\item	Алгоритм интерполяции Гаусса (Gaussian Interpolation).
-	\item	Алгоритм, рекомендованный в ГОСТ 30804.4.7-2013.
-	\item	Метод корреляционных функций (Correlation function method).
-	\item Модернизированный метод корреляционных функций (Modernized method of correlation functions).
-\end{enumerate}
+основой является БПФ. Однако применение ДПФ не позволяет точно оценить параметры гармоник сигнала, когда
+максимум ДПФ не совпадает с максимумом спектра. В связи с этим необходимо применять дополнительные алгоритмы. Исследованы методы оценки спектральных составляющих: метод Якобсена (Jacobsen's Modified Quadratic Estimator), два метода Квина (Quinn's Estimator, Quinn's Second Estimator), два метода Маклеода (Macleod's Estimator), метод Грэндка (Grandke's method), алгоритм параболической интерполяции (Parabolic Interpolation), алгоритм интерполяции Гаусса (Gaussian Interpolation), алгоритм, рекомендованный в ГОСТ 30804.4.7-2013, метод корреляционных функций (Correlation function method), модернизированный метод корреляционных функций (Modernized method of correlation functions).
 %B. G. Quinn, "Estimation of frequency, amplitude, and phase from the DFT of a time series," in IEEE Transactions on Signal Processing, vol. 45, no. 3, pp. 814-817, March 1997, doi: 10.1109/78.558515.
 % B. G. Quinn, "Estimating frequency by interpolation using Fourier coefficients," in IEEE Transactions on Signal Processing, vol. 42, no. 5, pp. 1264-1268, May 1994, doi: 10.1109/78.295186.
 % B. G. Quinn and P. J. Kootsookos, "Threshold behavior of the maximum likelihood estimator of frequency," in IEEE Transactions on Signal Processing, vol. 42, no. 11, pp. 3291-3294, Nov. 1994, doi: 10.1109/78.330402.
@@ -145,32 +131,16 @@ $\eta$ – шум.
 % Елизаров Д. А. Анализ методов оценки гармонических составляющих напряжения в электроэнергетических системах //Омский научный вестник. – 2016. – №. 2 (146).
 
 Алгоритмы являются интерполяционными для нахождения параметров гармоник, кроме трех последних методов (метод корреляционных функций, модернизированный метод корреляционных функций и метод по ГОСТу). Сутью метода интерполирования является нахождение промежуточных значений величины по имеющемуся дискретному набору известных значений, то есть кривая построенной функции должна точно пройти через имеющиеся точки данных.
-Нижняя граница Крамера-Рао является объективным показателем для
-определения границы дисперсии ошибки при оценке неизвестного параметра при
-использовании различных методов. Для параметров гармоник напряжения
-неравенство Крамера-Рао выглядит следующим образом:
-
-В результате анализа выявлено, что метод корреляционных функций наиболее точен, но использует большее количество математических операций, поэтому требует большего времени на выполнение. Поэтому был разработан Прямой корреляционный метод с использованием быстрых алгоритмов обработки сигналов (рисунок \ref{img:Diagram_GSA}).
-
-На графике \ref{img:Fundamental_frequency_offset_versus_noise_level} представлены зависимости смещения оценки основной частоты от уровня шума. На 
-графике слева не отражен диапазон от минус 30 дБ до минус 10 дБ, где интерполяционные методы имеют значительное смещение и не вписываются в данный график, в отличие от метода корреляционных функций.
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.8] {Fundamental frequency offset versus noise level.pdf}
-	\caption{Графики зависимостей смещения основной частоты от уровня шума.}
-	\label{img:Fundamental_frequency_offset_versus_noise_level}
-\end{figure}
-Под смещением в данном случае понимается абсолютное значение разности установленной частоты напряжения от частоты напряжения, полученной расчетным путем. 
-
-На графике \ref{img:Dispersion_in_the_estimation_of_the_fundamental_frequency_of_the_voltage} представлена зависимость дисперсии при оценке основной частоты от уровня шума. Представлены методы: граница Крамера-Рао, метод корреляционных функций, второй метод Квина, метод Маклеода (5 точек). При повышении уровня шума погрешность 
-\begin{figure}[ht]
-	\centering
-	\includegraphics [scale=0.7] {Dispersion in the estimation of the fundamental frequency of the voltage.pdf}
-	\caption{Дисперсия при оценке основной частоты напряжения.}
-	\label{img:Dispersion_in_the_estimation_of_the_fundamental_frequency_of_the_voltage}
+	\includegraphics [scale=0.35] {Maximum_DFT.pdf}
+	\begin{flushright}
+		\caption{Случай несовпадения максимума ДПФ и максимума спектра гармоник.}	
+	\end{flushright}
+	\label{img:Maximum_DFT}
 \end{figure}
 
-Рассмотрим формулу модели сигнала:	
+Чтобы выявить наилучший алгоримт для оценки спектральных составляющих, рассмотрим формулу модели сигнала:	
 \begin{equation}
 	\label{eq:equation1}
 	s(t) = \displaystyle\sum_{k=0}^{N-1} A_k \cos \left({\frac{2 \pi}{T_s} f_{peak} t  + \varphi_k} \right)+ \eta(t)  
@@ -184,26 +154,27 @@ $\varphi_k$ -- начальная фаза;
 
 $\eta(t)$ -- шум. 
 
-\begin{figure}[ht]
-	\centering
-	\includegraphics [scale=0.5] {Maximum_DFT.pdf}
-	\begin{flushright}
-		\caption{Случай несовпадения максимума ДПФ и максимума спектра гармоник.}	
-	\end{flushright}
-	\label{img:Maximum_DFT}
-\end{figure}
 Если представить аналоговый сигнал в дискретной форме, то 
-максимум гармоники сигнала $f_{peak}$ и максимум дискретных гармоник $f_k$ будут не совпадать (рисунок \ref{img:Maximum_DFT}). ДПФ в комплексной форме:
+максимум гармоники сигнала $f_{peak}$ и максимум дискретных гармоник $f_k$ будут не совпадать (рисунок \ref{img:Maximum_DFT}). ДПФ можно представить в комплексной форме:
 \begin{equation}
 	\label{eq:equation3}
 	\dot{X}(n)= \displaystyle\sum_{k=0}^{N-1} x(k) \cdot \exp\left( -j \cdot \frac{2 \pi n k}{N}\right)
 \end{equation}  
 
-После Быстрого Преобразования Фурье на графике получаем дискретные гармоники $f_k-1$, $f_k$, $f_{k+1}$ и амплитудные гармоники $|X_{k-1}|$, $|X_k|$, $|X_{k+1}|$. Исследуемая математическая модель сигнала показывает соотношение между реальными гармониками и теми, которые мы получаем после использования ДПФ. 
+После Быстрого Преобразования Фурье на рисунке \ref{img:Maximum_DFT} видим дискретные гармоники $f_k-1$, $f_k$, $f_{k+1}$ и амплитудные гармоники $|X_{k-1}|$, $|X_k|$, $|X_{k+1}|$. Исследуемая математическая модель сигнала показывает соотношение между реальными гармониками и теми, которые мы получаем после использования ДПФ. 
+
+На рисунке \ref{img:Dispersion_in_the_estimation_of_the_fundamental_frequency_of_the_voltage} представлена зависимость дисперсии при оценке основной частоты от уровня шума. Представлены методы: граница Крамера-Рао, метод корреляционных функций, второй метод Квина, метод Маклеода (5 точек). В результате анализа выявлено, что метод корреляционных функций наиболее точен, но использует большее количество математических операций, поэтому требует большего времени на выполнение.  
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.61] {Dispersion in the estimation of the fundamental frequency of the voltage.pdf}
+	\caption{Дисперсия при оценке основной частоты напряжения.}
+	\label{img:Dispersion_in_the_estimation_of_the_fundamental_frequency_of_the_voltage}
+\end{figure}
+Поэтому в диссертационной работе был предложен новый метод -- Прямой корреляционный методом с использованием быстрых алгоритмов обработки сигналов (рисунок 	\ref{img:Diagram_GSA}). Данный метод отличается от интерполяционных методов тем, что метод более точен, так как использует большое количество математических операций с помощью быстрых алгоритмов обработки сигналов.
 
 Нижняя граница Крамера-Рао является объективным показателем для
 определения границы дисперсии ошибки при оценке неизвестного параметра при
-использовании различных методов. Общая оценка границы Крамера-Рао для сигналов в белом Гауссовом шуме:
+использовании различных методов. Общая оценка границы Крамера-Рао для сигналов в белом Гауссовом шуме определяется:
 \begin{equation}
 	\label{eq:equation14}
 	x[n] = A + s[n;\theta] + w[n], n=0,1,...,N-1	
@@ -226,25 +197,18 @@ $s[n;\theta]$ -- детерминированный сигнал.
 Для параметров гармоник сигнала неравенство Крамера-Рао выглядит следующим образом:
 %(3.41), C.34
 \begin{equation}
-	\label{eq:equation16}
-	var(\hat{A})\geq \frac{2  \sigma^2}{N} 
+\label{eq:equation16}
+var(\hat{A})\geq \frac{2  \sigma^2}{N}, var(\hat{\varphi})\geq \frac{2(2N-1)}{\eta N(N+1)}, var(\hat{f_0})\geq \frac{12}{(2\pi)^2 \eta  N(N^2 - 1)}    
 \end{equation}
 
-$var(\hat{A})$ -- дисперсия амплитуды.
-\begin{equation}
-	\label{eq:equation17}
-	var(\hat{f_0})\geq \frac{12}{(2\pi)^2 \eta  N(N^2 - 1)}  
-\end{equation}
+где $var(\hat{A})$ -- дисперсия амплитуды;
 
-$var(\hat{f_0})$ -- дисперсия частоты.
-
-\begin{equation}
-	\label{eq:equation18}
-	var(\hat{\varphi})\geq \frac{2(2N-1)}{\eta N(N+1)}  
-\end{equation}
+$var(\hat{f_0})$ -- дисперсия частоты;
 
 $var(\hat{\varphi})$ -- дисперсия фазы гармоник.
 
+Формулы, которые представлены выше для нахождения границы Крамера-Рао не учитывают оконные функции. В диссертационной работе выведена формула, которая повышает точность измерений для нахождения границы Крамера-Рао с применением оконных функций.
+ 
 При наблюдении за дискретным сигналом, на который накладывается аддитивный белый гауссовский шум, формула (\ref{eq:equation1}) может быть записана в виде: 
 \begin{equation}
 	\label{eq:equation3}
@@ -347,16 +311,17 @@ $x(n;\theta)$ – наблюдаемый сигнал;
 
 $A$ – амплитуда гармоники. 
 
-Эта формула дает оценку дисперсии при использовании метода, вносящего оптимальную несмещенную оценку. 
-
-Эксперименты были проведены при различных входных параметрах (число точек, амплитуда, частота и фаза сигналов, дисперсия шума или коэффициент окна). Ни в одном случае не было зафиксировано отклонение результатов эксперимента от результатов, полученных по предложенной формуле. В работе \cite{altman2020boundary} ввели обозначение коэффициент окна:
+Эта формула дает оценку дисперсии при использовании метода, вносящего оптимальную несмещенную оценку. В работе \cite{altman2020boundary} ввели новое обозначение коэффициент окна:
 \begin{equation}
 	\label{eq:equation25}
 	F_{win}=\frac{\sum_{n=0}^{N-1}w_n^2}{\left(\sum_{n=0}^{N-1} w_n\right)^2}
 \end{equation}
 
-Данный коэффициент показывает, во сколько ухудшится оценка амплитуды гармоники при использовании окна $w$.
+Данный коэффициент показывает, во сколько ухудшится оценка амплитуды гармоники при использовании окна $w$ (таблица \label{tbl:test2_1}).
 
+Эксперименты были проведены при различных входных параметрах (число точек, амплитуда, частота и фаза сигналов, дисперсия шума или коэффициент окна). Ни в одном случае не было зафиксировано отклонение результатов эксперимента от результатов, полученных по предложенной формуле. 
+
+Разработан комплекс программ на языке программирования Python: оценка дисперсии белого шума после наложения на него окна, оценка амплитуды при использовании разных окон, оценки амплитуды при различных уровнях шума.
 На графике \ref{img:noise_win_var} показано изменение дисперсии шума после наложении на него окна Кайзера с параметром $kaiser\_beta=5$, результаты расчета по формуле \ref{eq:equation7}. Из графика видно, что линии дисперсий практически совпадают:
 \begin{figure}[ht]
 	\centering
@@ -383,6 +348,34 @@ $A$ – амплитуда гармоники.
 Рассмотренили влияние различных оконных функций на границу Крамера-Рао амплитуды однотонального сигнала \cite{altman2020boundary}.
 Формула оценки дисперсии амплитуды \cite{altman2020boundary} дает наилучший результаты при выборе весовых функций: Кайзера ($\beta=4$), Хэмминга, Барлетта. Так как результаты расчетов по формуле и результаты моделирование близки к границе Крамера-Рао. Зависимость дисперсии оценки амплитуды от дисперсии шума показывают, что чем меньше коэффициент увеличения дисперсии, тем точнее результаты. Наихудший результат показало окно Кайзера с параметром $\beta=15$.
 
+Дальнейшие исследования влияния оконных функций на формулу для нахождения границы Крамера-Рао рассмотрены в статье \cite{altman2021boundary}.
+В статье изучили весовые функции: Кайзера, Барлетта, Ханна, Хэмминга, Блэкмана. Умножение сигнала на оконную функцию приводит сворачиванию каждой гармоники со спектром оконной функции. Дисперсии оценки увеличивается из-за наложения на исходный сигнал оконных функций. Результаты экспериментальных исследований показали, что в формуле для оценки дисперсии после наложения на него различных окон совпадают результаты моделирования и расчеты по формуле. Формула для оценки дисперсии амплитуды дает наилучший результат с весовыми функциями: Кайзера ($\beta=4$), Хэмминга, Барлетта.
+\begin{table}[ht]%
+	\caption{Зависимость дисперсии оценки амплитуды от дисперсии шума.}
+	\label{tbl:test2_1}
+	\fontsize{10pt}{10pt}\selectfont
+	\begin{longtable*}[c]{|c|c|}  
+		\hline
+		Окно &
+		Коэффициент увеличение дисперсии  \\
+		\hline			
+		Кайзера ($\beta=4$) & $1.24672$ \\
+		\hline
+		Кайзера ($\beta=7$) & $1.56900$ \\
+		\hline
+		Кайзера ($\beta=10$) & $1.84508$ \\
+		\hline
+		Кайзера ($\beta=15$) & $2.23330$ \\
+		\hline
+		Барлетта (треугольное окно) & $1.33333$ \\
+		\hline
+		Ханна (Хеннинга) & $1.50000$ \\
+		\hline 
+		Хэмминга & $1.36282$ \\
+		\hline
+	\end{longtable*}%
+\end{table}
+
 В результате анализа, произведенного во втором разделе, можно сделать следующие выводы:
 \begin{itemize}
 \item математической основой для анализа спектра сигналов является преобразование Фурье. Для дискретных сигналов применяется дискретное преобразование Фурье; 
@@ -407,109 +400,21 @@ $A$ – амплитуда гармоники.
 \underline{\textbf{Третья глава}} посвящена исследованию численных методов для нахождение оптимальной несмещенной оценки параметров гармоник:
 
 На основании анализа, выполненного в предыдущем разделе, оценку
-гармонических составляющих сигнала лучше производить прямой корреляционный метод с использованием быстрых алгоритмов обработки сигналов, так как он обеспечивает точность оценки параметров напряжения, близкую к нижней границе Крамера-Рао
-Алгоритм поиска гармоник представлен на рисунке \ref{img:Diagram_GSA}:
+гармонических составляющих сигнала лучше производить прямым корреляционным методом с использованием быстрых алгоритмов обработки сигналов (рисунок \ref{img:picture3.9.4}), так как он обеспечивает точность оценки параметров сигнала, близкую к нижней границе Крамера-Рао. Алгоритм поиска гармоник представлен на рисунке \ref{img:Diagram_GSA}:
 \begin{figure}[ht]
 	\centering
 	\includegraphics [scale=0.5] {Diagram_GSA2.png}
 	\caption{ГСА алгоритма поиска гармоник.}
 	\label{img:Diagram_GSA}
 \end{figure}
+
+На рисунке \ref{img:picture3.9.4} представлен спектр расширенного зашумленного сигнала. Предсложенный в диссертационной работе численный метод находит оптимальную несмещенную оценку амплитуды гармоник на основе корреляционного анализа, а так же с помощью его быстрой реализации на основе алгоритма разряженного БПФ (Spare FFT).
 \begin{figure}[ht]
 	\centering
 	\includegraphics [scale=0.45] {Figure_2.png}
 	\caption{Спектр расширенного сигнала.}
 	\label{img:picture3.9.4}
 \end{figure}
-Рассмотрим метод нахождения параметров гармоник. При заданной точности по частоте:
-\begin{equation}
-\label{eq:equation3.1}
-k_i=\frac{f_1}{f_{eps}}
-\end{equation}
-
-где ${f_{eps}}$ -- заданная точность.
-
-При заданной точности по амплитуде:
-\begin{equation}
-\label{eq:equation3.2}
-f_{eps}=a_{eps}*\frac{sw_0-w_1}{sw_0}
-\end{equation}
-
-где $a_{eps}$ -- заданная точность;
-
-$sw_i$ -- отсчеты спектра окна.
-
-При заданном шуме:
-\begin{equation}
-\label{eq:equation3.3}
-a_{eps} = var(A)\geq \frac{2\sigma^2}{N} \frac{\sum_{n=0}^{N-1}w_n^2}{\left(\sum_{n=0}^{N-1} w_n \right)^2}
-\end{equation}
-
-Рассмотрели применение метода разложения двумерной свертки при
-реализации цифровых фильтров. Линейная двумерная дискретная свертка определяется следующей формулой:
-\begin{equation}
-	\label{eq:equation3.5.1}
-	CON_{j1,j2} = \sum_{i1 =0}^{n1-1} \sum_{i2 =0}^{n2-1} x_{i1,i2} \cdot y_{i1-j1,i2-j2}
-\end{equation} 
-
-Дискретная корреляция двух последовательностей определяется следующей формулой: 
-\begin{equation}
-	\label{eq:equation3.5.2}
-	COR_{j1,j2} = \sum_{i1 =0}^{n1-1} \sum_{i2 =0}^{n2-1} x_{i1,i2} \cdot y_{i1+j1,i2+j2}
-\end{equation}
-
-Будем рассматривать три варианта вычисления двумерной свертки. Первый вариант – вычисление двумерной свертки непосредственно по формуле \ref{eq:equation3.5.1}. Второй вариант – использование предложенного в алгоритма разложения двумерной свертки в несколько двумерных сверток меньших размеров. Третий вариант – использование быстрых алгоритмов одномерной свертки для вычисления двумерной свертки.
-$$
-	CON_{j1,j2} = 
-	\begin{bmatrix}
-		\left( {B_{j1,j2} + B_{j1,j2+1}} \right) X_{0,0} \\
-		\left( {B_{j1+1,j2} + B_{j1+1,j2+1}} \right) X_{1,0} \\
-		\left( {B_{j1,j2+1} + B_{j1,j2+2}} \right) X_{0,1} \\
-		\left( {B_{j1+1,j2+1} + B_{j1+1,j2+2}} \right) X_{1,1}
-	\end{bmatrix}
-	+
-$$
-$$
-+
-	\begin{bmatrix}
-		-1 & 0 \\
-		0 & -1 \\
-		1 & 0  \\
-		0 & 1	
-	\end{bmatrix}
-	\cdot
-	\begin{bmatrix}
-		B_{j1,j2+1} \left( {X_{0,0} - X_{0,1}} \right) \\
-		B_{j1+1,j2+1} \left( {X_{1,0} - X_{1,1}} \right)	
-	\end{bmatrix}
-	+
-$$
-$$
-	+ 
-	\begin{bmatrix}
-		-1 & 0 \\
-		1 & 0 \\
-		0 & -1  \\
-		0 & 1	
-	\end{bmatrix}
-	\cdot
-	\begin{bmatrix}
-		\left(	{Y{j1+1,j2} + Y{j1+1,j2+1}} \right) \cdot A_0 \\
-		\left(	{Y{j1+1,j2+1} + Y{j1+1,j2+2}} \right) \cdot A_1	
-	\end{bmatrix}
-	+
-$$
-\begin{equation}
-\label{eq:equation3.5.13}
-	+
-	\begin{bmatrix}
-		1 \\ -1 \\ -1 \\ 1
-	\end{bmatrix}
-	\cdot
-	Y{j1+1,j2+1}
-	\cdot
-	(A_0 - A_1)
-\end{equation}
 
 В результате анализа, произведенного в третьем разделе, можно сделать следующие выводы:
 \begin{itemize}
@@ -538,15 +443,8 @@ $$
 
 В \underline{\textbf{четвертой главе}} приведено описание применения алгоритмов оценки параметров многотональных сигналов для анализа гармоник и интергармоник в электрических сетях на железнодорожном транспорте.
 
-В четвертом разделе рассматривается понятие качество электрической энергии (КЭ) и описываются стандарты, определяющие состав показателей КЭ и методики измерений. По результатам анализа проводится сравнение российских и иностранных стандартов, описывающих требования и нормы КЭ.
-
-\begin{figure}[ht]
-	\centerfloat{
-		\includegraphics[scale=0.5]{picture1}
-	}
-	\caption{Развитие государственных стандартов в области контроля КЭ.}\label{img:picture1}
-\end{figure} 
-
+Высшие гармониками, отрицательно влияет на работу силового электрооборудования. При несоответствии нормам коэффициента искажения синусоидальной формы кривой сигнала, возрастают суммарные потери электроэнергии, сокращается срок службы изоляции электрических машин и аппаратов, повышая аварийность в кабельных сетях, вызывая сбои в работе систем релейной защиты.
+ 
 В результате анализа, произведенного в четвертом разделе, можно сделать следующие выводы:
 \begin{itemize}
 \item в современных стандартах по анализу спектра в электрических сетях большее внимание уделяется нахождению интергармонических составляющих. Поскольку интергармонические составляющие имеют малую энергию по отношению к другим гармоникам и шуму, к алгоритмам для нахождения параметров гармоник возрастают требования по точности определения амплитуды в условиях высокого шума;
@@ -582,22 +480,41 @@ $$
   %  * Если цитировать каждый источник отдельной командой --- найти некоторые ошибки будет проще.
   %
   %% authorvak
-  \nocite{vakbib1}%
-  \nocite{vakbib2}%
+  \nocite{decomposition_method_application2017}%
+  \nocite{increased_efficiency2018}
+%  \textit{ Научные публикации в изданиях, входящих в Перечень ведущих рецензируемых научных журналов и изданий:}
   %
   %% authorwos
-  \nocite{wosbib1}%
+  \nocite{altman2019program}%
+  
   %
   %% authorscopus
-  \nocite{scbib1}%
+  \nocite{altman2019cache}%
+
   %
   %% authorconf
-  \nocite{confbib1}%
-  \nocite{confbib2}%
+  \nocite{detectors_local2016}
+  \nocite{boundary_recognition2017}
+  \nocite{innovative_projects2017}
+  \nocite{implementation_of_algorithms2017}
+  \nocite{information-measuring2018}
+  \nocite{efficiency_mark2018}
+  \nocite{accuracy_study2018}
+  \nocite{depth_expansion2018}
+  \nocite{application_of_fast2018}
+  \nocite{cache_oriented2019}
+  \nocite{comparative_analysis_2019}
+  \nocite{comparative_analysis2019}
+  \nocite{modern_information2019}
+  \nocite{complexity_assessment2019}
+  \nocite{comparative_study2020}
+  \nocite{altman2021boundary}
   %
   %% authorother
-  \nocite{bib1}%
-  \nocite{bib2}%
+  \nocite{Malyutin2018Mathematical}
+
+  
+
 
   \ifnumgreater{\value{usefootcite}}{0}{
     \begin{refcontext}[labelprefix={}]
