--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -109,23 +109,6 @@
   url        = {https://elibrary.ru/download/elibrary_37541855_29354836.pdf},
 }
 
-@Article{альтман2008оптимизация,
-  author    = {Альтман, Евгений Анатольевич},
-  journal   = {Омский научный вестник},
-  title     = {Оптимизация вычислительной схемы быстрого преобразования Фурье},
-  year      = {2008},
-  number    = {1 (64)},
-  publisher = {Федеральное государственное бюджетное образовательное учреждение высшего~…},
-}
-
-@InProceedings{альтман2017построение,
-  author    = {Альтман, ЕА},
-  booktitle = {Информационно-телекоммуникационные системы и технологии},
-  title     = {Построение субоптимальных моделей алгоритмов БПФ по основанию 2},
-  year      = {2017},
-  pages     = {409--411},
-}
-
 @InProceedings{comparative_study2020,
   author     = {Васеева, ТВ and Альтман, ЕА and Александров, АВ},
   booktitle  = {Инновационные проекты и технологии в образовании, промышленности и на транспорте},
@@ -133,14 +116,6 @@
   year       = {2020},
   pages      = {51--57},
   authorconf = {true},
-}
-
-@Article{альтман2012определение,
-  author  = {Альтман, ЕА and Елизаров, ДА},
-  journal = {Современные проблемы радиоэлектроники: сб. науч. тр./Сиб. федер. ун-т. Красноярск},
-  title   = {Определение параметров гармоник однотональных сигналов},
-  year    = {2012},
-  pages   = {119--124},
 }
 
 @InProceedings{comparative_analysis2019,
@@ -219,15 +194,29 @@
   authorscopus = {true},
 }
 
-@Article{Altman2020boundary2,
-  author    = {Альтман, ЕА and Васеева, ТВ and Александров, АВ},
-  journal   = {Динамика систем, механизмов и машин},
-  title     = {Граница Крамера-Рао для амплитуды гармоники при использовании оконных функций},
-  year      = {2020},
-  number    = {2},
-  pages     = {145--152},
-  volume    = {8},
-  publisher = {федеральное государственное бюджетное образовательное учреждение высшего~…},
+@Article{altman2021boundary,
+  author     = {Васеева, Татьяна Валериевна and Альтман, Евгений Анатольевич},
+  journal    = {Инновационные проекты и технологии в образовании, промышленности и на транспорте},
+  title      = {Граница Крамера-Рао амплитуды однотонального сигнала для методов ее оценки с использованием оконных функций},
+  year       = {2021},
+  pages      = {301--307},
+  authorconf = {true},
+  keywords   = {граница Крамера-Рао, дисперсия, оконная функция},
+  url        = {https://elibrary.ru/item.asp?id=45536365},
+}
+
+@Article{altman2019program,
+  author    = {Альтман, Евгений Анатольевич and Васеева, Татьяна Валериевна and Елизаров, Дмитрий Александрович},
+  title     = {Программа для расчета гармоник и интергармоник тока и напряжения электрической сети прямым корреляционным методом с использованием быстрых алгоритмов обработки сигналов},
+  year      = {2019},
+  authorwos = {true},
+}
+
+@Article{Malyutin2018Mathematical,
+  author      = {Малютин, АГ and Задорожный, ВН and Альтман, ЕА and Грицутенко, СС and Захаренко, ЕИ and Васеева, ТВ},
+  title       = {Математическое моделирование, численные методы и комплексы программ для решения задач обработки сигналов и анализа структуры информационной системы},
+  year        = {2018},
+  authorother = {true},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
