--- a/images/IT/Fundamental frequency offset versus noise level.tex
+++ b/images/IT/Fundamental frequency offset versus noise level.tex
@@ -149,7 +149,7 @@
 \draw[ultra thick, green] (3, 4.9) -- (3.5, 4.9) node[right, black, font=\small] {-- \Large{метод Макледона}};
 \draw[ultra thick, black!50] (3, 4.5) -- (3.5, 4.5) node[right, black, font=\small] {-- \Large{второй метод Квина}};
 \draw[ultra thick, red] (3, 4.1) -- (3.5, 4.1) node[right, black, font=\small] {-- \Large{метод Грэндка}};
-\draw[ultra thick, magenta] (3, 3.7) -- (3.5, 3.7) node[right, black, font=\small] {-- \Large{алгоритм параболическоц}};
+\draw[ultra thick, magenta] (3, 3.7) -- (3.5, 3.7) node[right, black, font=\small] {-- \Large{алгоритм параболической}};
 \node[right, black, font=\small] at (3.75, 3.3){\Large{интерполяции}};
 \draw[ultra thick,cyan] (3, 2.9) -- (3.5, 2.9) node[right, black, font=\small] {-- \Large{алгоритм интерполяции Гаусса}};
 \end{tikzpicture}
