--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -31,6 +31,8 @@
 Путем корректировки параметра $\beta$ мы можем выполнить настройку окна
 Кайзера.
 
+В основе всех методов оценки параметров гармоник многотональных сигналов лежат перечисленные выше базовые алгоритмы ЦОС. Параметры гармоник находятся по спектру сигнала, получаемого с помощью БПФ, который по сути представляет собой набор корреляций с различными гармониками. В следствии ограничения по времени обрабатываемого сигнала, все методы сталкиваются с эффектами, вызванными оконными функциями.
+
 В диссертационной работе рассмотрены известны алгоритмы, описывающие способы оценки спектральных составляющих сигнала: интерполяционные методы, метод корреляционных функций, модернизированный метод корреляционных функций и метод рекомендованный в ГОСТ, прямой корреляционный метод с использованием быстрых алгоритмов обработки сигналов. 
 
 Значительный вклад в решение вопросов по измерению оценки параметров гармоник внесли Российские и зарубежные ученые: 
@@ -114,11 +116,11 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и други
 	\item Разработанный комплекс программ позволяет проводить научные исследования в области цифровой обработки сигналов и используется в учебном процессе.
 \end{enumerate}
 
-На основании теоретических и экспериментальных исследований разработан и зарегистрирована программа, написанная на языке программирования Pytnon, позволяющая решать задачи спектрального анализа напряжений в электроэнергетической системе, а так же оценивать параметры гармоник многотонального сигнала.
+На основании теоретических и экспериментальных исследований разработан и зарегистрирована программа, написанная на языке программирования Python, позволяющая решать задачи спектрального анализа напряжений в электроэнергетической системе, а так же оценивать параметры гармоник многотонального сигнала.
 
 
 {\methods} 
-Исследования состояла в итерационном изучении объекта исследования с попеременным уточнением его модели с точки зрения математического описания и с точки зрения его программной реализации. При этом использовались методы исследования основанные на математическом анализе и математической статистики с одной стороны и методы численного моделирования с использованием платформы SciPy для языка программирования Python с другой.
+Исследование состоит в итерационном изучении объекта исследования с попеременным уточнением его модели с точки зрения математического описания и с точки зрения его программной реализации. При этом использовались методы исследования основанные на математическом анализе и математической статистики с одной стороны и методы численного моделирования с использованием платформы SciPy для языка программирования Python с другой.
 
 % Второй вариант методов
 %Для решения поставленных задач в диссертационной работе использовались методы математического анализа и теории вероятностей, численные методы. Исследования алгоритмов осуществлялось на ЭВМ с помощью языков программирования Python и С. 
@@ -135,9 +137,9 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и други
 %по~формулировкам защищаемых положений.
 
 {\reliability} 
-научных результатов, выводов и рекомендаций диссертации определяются корректным применением
+научных результатов, выводов и рекомендаций диссертации определяется корректным применением
 общенаучных методов исследования и математических методов, а также
-надежной информационной базой исследования. Выводы диссертационного исследования не противоречат известным теоретическим и практическим результатам, содержащимся в трудах отечественных и зарубежных ученых в области повышения энергетической эффективности.
+надежной информационной базой исследования. Выводы диссертационного исследования не противоречат известным теоретическим и практическим результатам, содержащимся в трудах отечественных и зарубежных ученых в области улучшения алгоритмов оценки параметров многотонального сигнала.
 
 
 % второй вариант
@@ -145,27 +147,41 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho и други
 
 {\probation}
 Основные результаты работы докладывались~на:
+
 \begin{enumerate}
-\item Инновационные проекты и технологии в образовании, промышленности и на транспорте. Материалы научной конференции, посвященной Дню Российской науки. Министерство транспорта Российской Федерации, Федеральное агентство железнодорожного транспорта, Омский государственный университет путей сообщения \cite{Altman2020boundary2}
 
-\item Инновационные проекты и технологии в образовании, промышленности и на транспорте \cite{comparative_study2020}.  
+\item Научная конференция, посвященная Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2016) \cite{detectors_local2016}.	
 
-\item Инновации в информационных технологиях, машиностроении и автотранспорте. Сборник материалов III Международной научно-практической конференции \cite{complexity_assessment2019}.
+\item  Всероссийская научно-практическая конференция <<Информационно-телекоммуникационная системы и технологии>>
+(Кемерово, 2016) \cite{boundary_recognition2017}.
 
-\item Надежность функционирования и информационная безопасность инфокоммуникационных, телекоммуникационных и радиотехнических сетей и систем. Материалы всероссийской научно-технической конференции. \cite{modern_information2019}. 
+\item XI научная конференция, посвященной Дню российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2017) \cite{innovative_projects2017}
 
-\item Инновационные проекты и технологии в образовании, промышленности и на транспорте. Материалы научной конференции, посвященной Дню Российской науки. Омский государственный университет путей сообщения. \cite{comparative_analysis2019}.
+\item V Всероссийская научно-техническая конференция с международным участием <<Технологическое обеспечение ремонта и повышение динамических качеств железнодорожного подвижного состава>> (Омск, 2017)  \cite{implementation_of_algorithms2017}
 
-\item Системы управления, информационные технологии и математическое моделирование. Материалы I Всероссийской научно-практической конференции с международным участием \cite{comparative_analysis_2019}.
+\item II Международная научно-практическая конференция  <<САПР и моделирование в современной электронике>> (Брянск, 2018)  \cite{information-measuring2018}
 
-\item Проблемы машиноведения. Материалы III Международной научно-технической конференции \cite{cache_oriented2019}.
+\item XIX Всероссийская конференция молодых ученых по математическому моделированию и информационным технологиям <<Тезисы XIX всероссийской конференции молодых ученых  по математическому моделированию и информационным технологиям>> (Кемерово, 2018)  \cite{efficiency_mark2018}.
 
-\item Информационные и управляющие системы на транспорте и в промышленности. Материалы II всероссийской научно-технической конференции \cite{accuracy_study2018}.
+\item II Всероссийская научно-техническая конференция с международным участием <<Информационные и управляющие системы на транспорте и в промышленности>> (Омск, 2018) \cite{accuracy_study2018}.
 
-\item Тезисы XIX Всероссийской конференции молодых учёных по математическому моделированию и информационным технологиям. Тезисы докладов \cite{efficiency_mark2018}.
+\item Научная конференция, посвященная Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2018) \cite{depth_expansion2018}.
 
-\item  САПР и моделирование в современной электронике. Cборник научных трудов II Международной научно-практической конференции \cite{information-measuring2018}
+\item XXI Вcероссийская научно-техническая конференция <<Современные проблемы радоэлектроники>> (Красноярск, 2018) \cite{application_of_fast2018}.
 
+\item III Международная научно-техническая конференция <<Проблемы машиноведения>> (Омск, 2019) \cite{cache_oriented2019}.
+
+\item I Всероссийская научно-практическая конференция с международным участием <<Системы управления, информационные технологии и математическое моделирование>> (Омск, 2019) \cite{comparative_analysis_2019}.
+
+\item Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2019) \cite{comparative_analysis2019}.
+
+\item Материалы всероссийской научно-технической конференции <<Надежность функционирования и информационная безопасность инфокоммуникационных, телекоммуникационных и радиотехнических сетей и систем>> (Омск, 2019) \cite{modern_information2019}. 
+
+\item III Международная научно-практическая конференция <<Инновации в информационных технологиях, машиностроении и автотранспорте>> \cite{complexity_assessment2019}.
+
+\item Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2020) \cite{comparative_study2020}.  
+
+\item Материалы научной конференции, посвященной Дню Российской науки <<Инновационные проекты и технологии в образовании, промышленности и на транспорте>> (Омск, 2021) \cite{altman2021boundary}
 \end{enumerate}
 %{\contribution} Автор принимал активное участие \ldots
 
